// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Pill with border 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#B8B8B8",
        "borderColor": "#28CD88",
        "borderRadius": 999999,
        "borderWidth": 1,
        "display": "flex",
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 0,
        "flexWrap": "nowrap",
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 6,
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "display": "flex",
        },
      ]
    }
  >
    Icon
  </Text>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "width": 6,
        },
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#27252E",
          "display": "flex",
          "fontFamily": "UniswapSansBeta3-Regular",
          "fontSize": 14,
        },
        Object {
          "color": undefined,
        },
      ]
    }
  >
    My Second Pill Label
  </Text>
</View>
`;

exports[`renders a Pill without image 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#FD4040",
        "borderColor": "transparent",
        "borderRadius": 999999,
        "borderWidth": 1,
        "display": "flex",
        "flexBasis": "auto",
        "flexDirection": "row",
        "flexGrow": 0,
        "flexShrink": 0,
        "flexWrap": "nowrap",
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 6,
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#27252E",
          "display": "flex",
          "fontFamily": "UniswapSansBeta3-Regular",
          "fontSize": 14,
        },
        Object {
          "color": "blue",
        },
      ]
    }
  >
    My Pill Label
  </Text>
</View>
`;
